--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<div class="card">
-						<h1 class="card-title">
-							Todo List
-						</h1>
+					<div class="card" id="card">
+						<h1 class="card-title">Todo List</h1>
 						<div class="card-body">
 							<div id="input">
 								<input
@@ -44,14 +42,7 @@
 						</div>
 					</div>
 
-					<!-- <div class=""> -->
-					<ul class="list-group list-group-flush" id="mylist">
-						<!-- <li class="list-group-item">
-							todolistd
-							<span class="close btn btn-close">&times</span>
-						</li> -->
-					</ul>
-					<!-- </div> -->
+					<div id="mylist"></div>
 				</div>
 			</div>
 		</div>
